--- a/Chapter3：Git分支.ipynb
+++ b/Chapter3：Git分支.ipynb
@@ -152,10 +152,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### <font color=#8D0000>远程分支</font>\n",
+    "远程分支（remote branch）是对远程仓库中分支的索引。它们是<font color=#FFD700>一些无法移动的本地分支；只有Git进行网络交互时才会更新</font>，也就是说只要你不和服务器通讯，你的 origin/master 指针依然保持原位不会移动。远程分支就像是书签，提醒你上次连接远程仓库时上面各分支的位置。\n",
+    "\n",
+    "我们用（远程仓库名）/（分支名）这样的分支形式表示远程分支。\n",
+    "\n",
+    "可以运行 git fetch origin 来同步远程服务器上的数据到本地。该命令首先找到 origin 是哪个服务器，从上面获取你尚未拥有的数据，更新你本地的数据库，然后把 origin/master 的指针移动到最新的位置上。\n",
+    "\n",
+    "为了演示拥有多个远程分支（在不同远程服务器上）的项目是如何工作的。假设还有另一个供敏捷开发小组使用的内部服务器 git.team1.ourcompany.com 。可以用 git remote add 命令把它加为当前项目的远程分支之一。\n",
+    "```\n",
+    "$ git remote add  replace_name URL\n",
+    "$ git fetch replace_name\n",
+    "```\n",
+    "由于当前该服务器上的内容是你 origin 服务器上的子集，Git不会下载任何数据，而是简单创建一个名为 relace_name 的远程分支。\n",
+    "\n",
+    "##### <font color=#00CED1>推送本地分支</font>\n",
+    "创建的本地分支不会因为写入操作而自动的同步到引用的远程分支，需要明确执行推送分支操作。\n",
+    "\n",
+    "如果你有一个分支需要他人一起开发，可以运行 git push (远程仓库)（分支名） 。也可以运行 git push origin (本地分支：远程分支) 来实现相同的功能。通过此语法可以将本体分支推送到某个命名不同的远程分支。\n",
+    "\n",
+    "值得注意的是，在 fetch 操作下载好新的运程分支后，你仍然无法本地编辑该远程仓库中的分支。换句话说，你不会有一个新的 serverfix 分支，只是一个无法移动的 origin/serverfix 指针。\n",
+    "\n",
+    "如果要把远程分支的内容合并到当前分支， 可以运行 git merge origin/serverfix 。如果想要一份自己的 serverfix 来开发，可以在远程分支的基础上分化一个新的分支：\n",
+    "```\n",
+    "$ git branch -b serverfix origin/serverfix\n",
+    "```\n",
+    "这会切换到新建的 serverfix 本地分支，其内容同远程分支 origin/serverfix 一致。\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
